fix: fix background color on Safari

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,17 @@
     scrollbar-width: none;
   }
 }
+
+html,
+body {
+  background-color: #0a0a0a;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+}
+
+#root {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+}
